<resources>
    <string name="app_name">Calculadora</string>
    <string name="clear">C</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="plus">+</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="less">-</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="multiply">*</string>
    <string name="number0">0</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="division">/</string>
    <string name="square">√</string>
    <string name="exponentiation">^</string>
    <string name="percent">%</string>
    <string name="calculadora_avancada">Calculadora Avançada</string>
</resources>