<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/resultTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="150dp"
        android:text="@string/number0"
        android:textSize="30sp"
        android:textAlignment="viewEnd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/clearBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@id/resultTv"
            android:onClick="onClickOperation"
            android:text="@string/clear"/>
        <Button
            android:id="@+id/number7Bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clearBt"
            android:onClick="onClick"
            android:text="@string/number7"/>
        <Button
            android:id="@+id/number8Bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toRightOf="@id/number7Bt"
            app:layout_constraintTop_toBottomOf="@id/clearBt"
            android:onClick="onClick"
            android:text="@string/number8"/>
        <Button
            android:id="@+id/number9Bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toRightOf="@id/number8Bt"
            app:layout_constraintTop_toBottomOf="@id/clearBt"
            android:onClick="onClick"
            android:text="@string/number9"/>
        <Button
            android:id="@+id/plusBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toRightOf="@id/number9Bt"
            app:layout_constraintTop_toBottomOf="@id/clearBt"
            android:onClick="onClick"
            android:text="@string/plus"/>

        <Button
            android:id="@+id/number4Bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number7Bt"
            android:onClick="onClick"
            android:text="@string/number4"/>

        <Button
            android:id="@+id/number5Bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toRightOf="@id/number4Bt"
            app:layout_constraintTop_toBottomOf="@id/number8Bt"
            android:onClick="onClick"
            android:text="@string/number5"/>

        <Button
            android:id="@+id/number6Bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toRightOf="@id/number5Bt"
            app:layout_constraintTop_toBottomOf="@id/number9Bt"
            android:onClick="onClick"
            android:text="@string/number6"/>

        <Button
            android:id="@+id/lessBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toRightOf="@id/number6Bt"
            app:layout_constraintTop_toBottomOf="@id/plusBt"
            android:onClick="onClick"
            android:text="@string/less"/>

        <Button
            android:id="@+id/number1Bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number4Bt"
            android:onClick="onClick"
            android:text="@string/number1"/>

        <Button
            android:id="@+id/number2Bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toRightOf="@id/number1Bt"
            app:layout_constraintTop_toBottomOf="@id/number5Bt"
            android:onClick="onClick"
            android:text="@string/number2"/>

        <Button
            android:id="@+id/number3Bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toRightOf="@id/number2Bt"
            app:layout_constraintTop_toBottomOf="@id/number6Bt"
            android:onClick="onClick"
            android:text="@string/number3"/>

        <Button
            android:id="@+id/multiplyBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toRightOf="@id/number3Bt"
            app:layout_constraintTop_toBottomOf="@id/lessBt"
            android:onClick="onClick"
            android:text="@string/multiply"/>

        <Button
            android:id="@+id/number0Bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number1Bt"
            android:onClick="onClick"
            android:text="@string/number0"/>

        <Button
            android:id="@+id/pointBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toRightOf="@id/number0Bt"
            app:layout_constraintTop_toBottomOf="@id/number2Bt"
            android:onClick="onClick"
            android:text="@string/point"/>

        <Button
            android:id="@+id/equalsBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toRightOf="@id/pointBt"
            app:layout_constraintTop_toBottomOf="@id/number3Bt"
            android:onClick="onClickOperation"
            android:text="@string/equals"/>

        <Button
            android:id="@+id/divisionBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toRightOf="@id/equalsBt"
            app:layout_constraintTop_toBottomOf="@id/multiplyBt"
            android:onClick="onClick"
            android:text="@string/division"/>

</androidx.constraintlayout.widget.ConstraintLayout>